--- a/composer.json
+++ b/composer.json
@@ -20,9 +20,20 @@
 	"require": {
         "php": ">=5.6.0"
 	},
+    "require-dev": {
+        "phpunit/phpunit": "^5"
+    },
 	"autoload": {
         "psr-4": {
 			"LetoChat\\": "src/"
 		}
-    }
+    },
+	"autoload-dev": {
+        "psr-4": {
+			"LetoChat\\": "tests/"
+		}
+    },
+	"scripts": {
+        "test": "./vendor/bin/phpunit"
+	}
 }
