--- a/composer.json
+++ b/composer.json
@@ -18,8 +18,9 @@
 	},
     "license": "MIT",
 	"require": {
-        "php": ">=5.6.0"
-	},
+		"php": ">=5.6.0",
+		"ext-json": "*"
+    },
     "require-dev": {
         "phpunit/phpunit": "^5"
     },
