--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
 		"email": "technical@letochat.com",
 		"issues": "https://www.letochat.com/support/technical"
 	},
-    "license": "MIT",
+    "license": "GPL-3.0",
 	"require": {
 		"php": ">=5.6.0",
-		"ext-json": "*"
+		"ext-json": "*",
+		"ext-curl": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^5"
